processed/gerrit/txt/50641.txt
Change:     50641
Subject:    LU-16739 uapi: make lustre_disk.h buildable in user land
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/50641
Change-Id:  I4b962572ec2bf76159a17807c564390ded00d630
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      James Simmons
Created:    2023-04-14 18:28:26.000000000
Updated:    2023-05-09 05:47:18.000000000
Patch Set:  12
Insertions: +23
Deletions:  -19
Comments:   36 (0 unresolved)

--- Labels ---
  Code-Review: Arshad Hussain: +1; Shaun Tancheff: +1; Andreas Dilger: +1; Sebastien Buisson: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Sebastien Buisson, Arshad Hussain, Shaun Tancheff

--- Commit Message ---
LU-16739 uapi: make lustre_disk.h buildable in user land

The rbac work introduced a regression that makes lustre_disk.h
UAPI header no longer buildable in user land. This is causing
sanity test 400b to fail with:

lustre_disk.h:266:18: error: 'LUSTRE_NODEMAP_NAME_LENGTH' undeclared here (not in a function)
  char   ncr_name[LUSTRE_NODEMAP_NAME_LENGTH + 1];
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_disk.h:267:20: error: 'ncr_flags' is narrower than values of its type [-Werror]
  enum nm_flag_bits ncr_flags:8;
                    ^~~~~~~~~
lustre_disk.h:267:20: error: field 'ncr_flags' has incomplete type
lustre_disk.h:268:21: error: 'ncr_flags2' is narrower than values of its type [-Werror]
  enum nm_flag2_bits ncr_flags2:8;
                     ^~~~~~~~~~
lustre_disk.h:268:21: error: field 'ncr_flags2' has incomplete type
lustre_disk.h:277:2: error: unknown type name 'lnet_nid_t'
  lnet_nid_t nrr_start_nid;
  ^~~~~~~~~~
lustre/lustre_disk.h:278:2: error: unknown type name 'lnet_nid_t'
  lnet_nid_t nrr_end_nid;
  ^~~~~~~~~~

To fix this move several pieces of nodemap handling from lustre_idl.h
to lustre_disk.h.

The git commit 5e6a51787fef20b849682d8c49ec9c2beed5c373 for Linux
kernel version 6.2.0-rc5 made guid_t only available for kernel code.
The only UAPI data structure left is uuid_le. Thankfully MCE requires
this otherwise even uuid_le would be removed. We will need to keep
an eye on this.

Test-Parameters: trivial testlist=sanity envdefinitions=ONLY=400b
Fixes: 5e48ffca322 ("LU-16524 nodemap: add rbac property to nodemap")
Change-Id: I4b962572ec2bf76159a17807c564390ded00d630
Signed-off-by: James Simmons <jsimmons@infradead.org>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50641
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (James Simmons, 2023-04-14 18:28:26.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-04-14 18:32:55.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-04-14 18:49:53.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/93949/ : FAILURE

--- Message (James Simmons, 2023-04-14 19:36:54.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2023-04-14 19:38:52.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2023-04-14 20:03:40.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/93954/ : SUCCESS

--- Message (Andreas Dilger, 2023-04-14 20:24:05.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Andreas Dilger, 2023-04-14 20:26:30.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Sebastien Buisson, 2023-04-17 07:56:04.000000000) ---
Patch Set 2: Code-Review+1

--- Message (wc-checkpatch, 2023-04-18 05:38:10.000000000) ---
Patch Set 2: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.

--- Message (James Simmons, 2023-04-18 13:44:15.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2023-04-18 13:46:25.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (jenkins, 2023-04-18 14:08:46.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94049/ : FAILURE

--- Message (James Simmons, 2023-04-18 14:34:17.000000000) ---
Uploaded patch set 4.

--- Message (wc-checkpatch, 2023-04-18 14:37:24.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (jenkins, 2023-04-18 14:57:47.000000000) ---
Patch Set 4: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94054/ : FAILURE

--- Message (James Simmons, 2023-04-18 15:08:15.000000000) ---
Patch Set 4:

How did "LU-16655 scrub: change sf_uuid to guid_t" build on SUSE15. It seems guuid_t doesn't exit on SUSE15

--- Message (James Simmons, 2023-04-18 15:14:01.000000000) ---
Uploaded patch set 5.

--- Message (wc-checkpatch, 2023-04-18 15:18:10.000000000) ---
Patch Set 5:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (jenkins, 2023-04-18 15:32:18.000000000) ---
Patch Set 5: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94058/ : FAILURE

--- Message (Andreas Dilger, 2023-04-18 18:03:48.000000000) ---
Patch Set 5:

(2 comments)

Possibly it would be better to have a separate uapi/linux/lustre/lustre_nodemap.h header that is included where needed, rather than having lustre_disk.h include all of lustre_idl.h?

--- Message (James Simmons, 2023-04-22 23:34:59.000000000) ---
Uploaded patch set 6.

--- Message (Lustre Gerrit Janitor, 2023-04-22 23:36:57.000000000) ---
Patch Set 6:

(4 comments)

centos7: Compile failed

rhel8.5: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/30587/results.html

--- Message (wc-checkpatch, 2023-04-22 23:39:45.000000000) ---
Patch Set 6:

Looks good to me.

--- Message (James Simmons, 2023-04-22 23:42:16.000000000) ---
Uploaded patch set 7.

--- Message (jenkins, 2023-04-22 23:42:19.000000000) ---
Patch Set 6: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94228/ : ABORTED

--- Message (wc-checkpatch, 2023-04-22 23:44:56.000000000) ---
Patch Set 7:

Looks good to me.

--- Message (James Simmons, 2023-04-22 23:55:27.000000000) ---
Uploaded patch set 8.

--- Message (jenkins, 2023-04-22 23:55:29.000000000) ---
Patch Set 7: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94229/ : ABORTED

--- Message (wc-checkpatch, 2023-04-23 00:00:07.000000000) ---
Patch Set 8:

Looks good to me.

--- Message (jenkins, 2023-04-23 00:18:54.000000000) ---
Patch Set 8: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94230/ : FAILURE

--- Message (James Simmons, 2023-04-24 13:12:00.000000000) ---
Uploaded patch set 9.

--- Message (wc-checkpatch, 2023-04-24 13:12:03.000000000) ---
Patch Set 9:

(1 comment)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2023-04-24 13:12:58.000000000) ---
Patch Set 9:

(13 comments)

centos7: Compile failed

rhel8.5: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/30649/results.html

--- Message (jenkins, 2023-04-24 13:27:49.000000000) ---
Patch Set 9: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/94283/ : FAILURE

--- Message (James Simmons, 2023-04-24 13:42:48.000000000) ---
Uploaded patch set 10.

--- Message (wc-checkpatch, 2023-04-24 13:47:38.000000000) ---
Patch Set 10:

Looks good to me.

--- Message (jenkins, 2023-04-24 14:47:21.000000000) ---
Patch Set 10: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/94286/ : SUCCESS

--- Message (Autotest, 2023-04-25 00:06:08.000000000) ---
Patch Set 10:

Onyx Autotest retesting enforced review-ldiskfs-dne session on el8.7-x86_64/ldiskfs servers and clients for build 94286 patch 10. Requested by James Simmons because of LU-15566.

--- Message (Andreas Dilger, 2023-04-25 22:04:40.000000000) ---
Patch Set 10: Code-Review-1

(5 comments)

--- Message (James Simmons, 2023-04-26 15:14:23.000000000) ---
Uploaded patch set 11.

--- Message (wc-checkpatch, 2023-04-26 15:19:04.000000000) ---
Patch Set 11:

Looks good to me.

--- Message (jenkins, 2023-04-26 15:54:44.000000000) ---
Patch Set 11: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/94359/ : SUCCESS

--- Message (Andreas Dilger, 2023-04-28 07:00:31.000000000) ---
Patch Set 11: Code-Review+1

(1 comment)

--- Message (James Simmons, 2023-04-28 17:42:56.000000000) ---
Patch Set 11:

(1 comment)

Sebastien can you take another look.

--- Message (Andreas Dilger, 2023-04-28 18:02:20.000000000) ---
Patch Set 11:

(1 comment)

--- Message (Arshad Hussain, 2023-04-30 15:33:19.000000000) ---
Patch Set 11: Code-Review+1

Verified +1 (on 4.18.0-372.9.1.el8.x86_64/Rocky Linux release 8.5 )

--- Message (Sebastien Buisson, 2023-05-01 17:02:32.000000000) ---
Patch Set 11: Code-Review+1

--- Message (Shaun Tancheff, 2023-05-08 01:27:28.000000000) ---
Patch Set 11: Code-Review+1

--- Message (Oleg Drokin, 2023-05-09 05:47:14.000000000) ---
Patch Set 11: Code-Review+2

--- Message (Oleg Drokin, 2023-05-09 05:47:18.000000000) ---
Change has been successfully cherry-picked as 5a6725d19d4037026d7cab2442b0c639d1511e5d by Oleg Drokin
